[tool.poetry]
name = "environmentsimulation"
version = "0.1.0"
description = ""
authors = ["Rvdixit23 <rvdixit23@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
